# CSFs_loader

./: .gitignore  CLAUDE.md  Cargo.toml  pixi.toml  pyproject.toml
docs/: performance_optimization_log.md
python/csfs_loader/: __init__.py  _csfs_loader.pyi
python/rcsfs/: __init__.py  _rcsfs.pyi
rcsfs/: __init__.py
src/: convert_csfs.rs  csfs_conversion.rs  csfs_descriptor.rs  descriptor_normalization.rs  lib.rs  main.rs
tests/: csfs_descriptor_test.rs  descriptor_normalization_test.rs  integration_test.rs  rcsfs_test.py
tests/fixtures/: sample.csf
